AP-19124: RawHTTPInput accepts binary files and input table bugfix
AP-19124 (Container Input (Raw HTTP) and Container Output (Raw HTTP) nodes)